Upload dos arquivos do exercicio

--- a/exercicício/ex6.html
+++ b/exercicício/ex6.html
@@ -7,17 +7,17 @@
 
 </head>
 <body style="background-color:#0550E6;">
-        <h1 style=" background-color: #41B7FA; color: #0f2d3f;">Titulo</h1>
-        <h2 style="color: #d9563f;">Sub-Titulo</h2>
+        <h1 style=" background-color: #41B7FA; color: #0f2d3f;">capitulo 1</h1>
+        <h2 style="color: #d9563f;">Capitulo 1.1</h2>
         <p style="color: white;">
             freestar
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pretium feugiat turpis vitae blandit. Nam tortor arcu, feugiat id placerat quis, tempor ac tellus. Nam odio neque, laoreet lacinia tempor eu, consectetur fermentum sem. Nunc non nisl dui. Praesent fermentum non arcu quis bibendum. Sed ac est quis orci sollicitudin imperdiet nec in turpis. Vestibulum purus erat, aliquam ac neque in, convallis aliquet tortor. Sed gravida nibh imperdiet posuere mollis. Cras ornare vel lacus non lobortis. Praesent fermentum convallis metus, rhoncus dictum leo feugiat pulvinar. Pellentesque sed nunc at tellus consequat pellentesque id id velit. Nam at ornare lorem.</p>
-        <h2 style="color: #d9563f;" >Sub-Titulo</h2>
+        <h2 style="color: #d9563f;" >capitulo 1.2</h2>
         <p style="color: white;">Sed et augue ut orci sollicitudin tempus sed vel metus. Quisque eu tristique magna. Fusce sagittis enim eget dictum vulputate. Proin arcu lectus, pharetra eu nisi in, auctor venenatis ex. Duis leo felis, suscipit aliquam ornare vitae, imperdiet et lectus. Pellentesque ullamcorper nibh velit, dapibus imperdiet est semper vel. Vestibulum suscipit egestas felis sit amet luctus. Suspendisse sagittis vel ligula at viverra. Phasellus et consequat massa. Integer nec varius metus. Phasellus in mauris egestas, condimentum lectus eget, iaculis lorem.
 
         </p>
-        <h1 style=" background-color: #41B7FA; color: #0f2d3f;" >Titulo 2</h1>
-        <h2 style="color: #d9563f;" >Subtitulo</h2>
+        <h1 style=" background-color: #41B7FA; color: #0f2d3f;" >Capitulo2</h1>
+        <h2 style="color: #d9563f;" >Capitulo 2.1</h2>
         <p style="color: white;">Cras eu semper sapien. Cras rutrum ligula et velit tempor malesuada. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis eleifend massa vitae nisl tempor sagittis. Etiam vulputate ex nec massa convallis, vel molestie augue lobortis. Curabitur a justo libero. Maecenas lobortis vulputate lectus, sit amet facilisis lacus vestibulum consequat. Maecenas vel velit lorem. In vel est massa. Aenean ornare ac mi ut condimentum. Donec vitae ligula volutpat, lacinia tortor at, vehicula velit. Morbi et orci lobortis, molestie nisi et, scelerisque neque.
 
         </p>
