--- a/exercicício/ex3.html
+++ b/exercicício/ex3.html
@@ -8,7 +8,7 @@
     <style>
         th, td {
             border: 1px solid black;
-            padding: 8px;
+            /* padding: 8px; */
 
         }
 
